# hackathon-dse

./: Predict.ipynb  README.md  aiplatform.ipynb  key.json  main.ipynb  main.py  model.pkl  train.ipynb
Notebooks/: predict.ipynb
api/: main.py  predict.py  pyproject.toml  train.py
